import net.fabricmc.loom.task.RemapJarTask
import work.lclpnet.build.task.GithubDeploymentTask

plugins {
    id 'java'
    id 'fabric-loom' version '1.6-SNAPSHOT'
    id 'maven-publish'
    id 'gradle-build-utils' version '1.7.0'
    id 'kibu-plugin-dev' version '0.13.0'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

Properties props = buildUtils.loadProperties('publish.properties')

group = project.maven_group
version = buildUtils.gitVersion()

base {
    archivesName = project.archives_base_name
}

repositories {
    mavenCentral()

    maven {
        url 'https://repo.lclpnet.work/repository/internal'
    }

    maven {
        url 'https://repo.lclpnet.work/repository/snapshots'
    }

    maven {
        url = 'https://maven.nucleoid.xyz/'
    }
}

// list of extra source set names that will have minecraft classpath
def extraMcSourceSets = ['activity', 'game', 'dev']
// list of extra source set names that will be available in the main source set
def standaloneSourceSets = ['activity', 'game']
// list of extra source set names that should not be merged into the produced artifacts ("localRuntimeOnly")
def localExtraSourceSets = ['dev']
// list of extra source set names that should have their own standalone jar artifact
def artifactExtraSourceSets = ['activity']

standaloneSourceSets.each {
    sourceSets.register(it).configure {
        // make sourceSet classes available in the main sourceSet
        sourceSets.main.compileClasspath += it.output
    }
}

sourceSets {
    dev.compileClasspath += game.output
    dev.compileClasspath += main.output
    dev.compileClasspath += activity.output
    game.compileClasspath += activity.output
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
    modImplementation "work.lclpnet.mods.kibu:kibu:${project.kibu_version}"
    modImplementation "work.lclpnet.mods.kibu:kibu-world-api:${project.kibu_world_api_version}"
    modImplementation "work.lclpnet.mods.kibu:kibu-plugins:${project.kibu_plugins_version}"
    modImplementation "xyz.nucleoid:fantasy:${project.fantasy_version}"
    pluginImplementation("work.lclpnet.mcserver-api:mcserver-api-kibu:${project.mcserver_api_version}")
    pluginCompileOnly(pluginLocalRuntime("work.lclpnet.plugins:pal:${project.pal_version}"))

    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'org.json:json:20231013'
    implementation'com.google.dagger:dagger:2.46.1'
    annotationProcessor 'com.google.dagger:dagger-compiler:2.46.1'

    // bundle these dependencies
    bundle(implementation('org.apache.commons:commons-compress:1.23.0'))
    bundle(implementation('org.tukaani:xz:1.9'))
    bundle(implementation('org.apache.tika:tika-core:2.5.0'))

    "work.lclpnet:maze-lib:${project.maze_lib_version}".with {
        implementation it
        bundle (it) { transitive = false }
    }

    'work.lclpnet:json-config4j:1.0.0'.with {
        implementation it
        bundle (it) { transitive = false }
    }

    // test dependencies
    testImplementation "net.fabricmc:fabric-loader-junit:${project.loader_version}"
    testImplementation "org.mockito:mockito-core:5.6.0"
}

loom {
    serverOnlyMinecraftJar()

    runs {
        remove client
    }
}

test {
    useJUnitPlatform()
    systemProperty('fabric.side', 'server')
}

java {
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

tasks.withType(JavaCompile).configureEach {
    it.options.release.set(21)
}

processResources {
    // replace placeholders in resources
    inputs.property "version", project.version

    filesMatching("plugin.json") {
        expand "version": project.version
    }
}

// add main dependencies to the extra sourceSets
extraMcSourceSets.each { name ->
    configurations.named("${name}Implementation").configure {
        it.extendsFrom(configurations.implementation)
    }

    configurations.named("${name}CompileClasspath").configure {
        it.extendsFrom(configurations.modCompileClasspathMapped)
    }

    configurations.named("${name}RuntimeClasspath").configure {
        it.extendsFrom(configurations.modCompileClasspathMapped)
    }

    // add minecraft dependencies to extra sourceSet (only available after project evaluation)
    afterEvaluate {
        configurations.named("${name}CompileClasspath").get().extendsFrom(configurations.minecraftNamedCompile)
        configurations.named("${name}RuntimeClasspath").get().extendsFrom(configurations.minecraftNamedRuntime)
    }

    kibu {
        // add extra source sets to the dev plugin loader
        pluginPaths.from(sourceSets.named(name).get().output)
    }

    def set = sourceSets.named(name).get()

    sourceSets.named('test').configure {
        it.compileClasspath += set.output
        it.runtimeClasspath += set.output
    }

    if (!localExtraSourceSets.contains(name)) {
        tasks.named("process${name.capitalize()}Resources").configure {
            tasks.processResources.dependsOn(it)  // should process activity resources
        }

        // include extra sourceSet in main jar tasks
        [jar, sourcesJar, shadowJar].each {
            it.from set.output
        }
    }
}

def licenseJarTasks = [jar, sourcesJar, shadowJar]

artifactExtraSourceSets.each { name ->
    // add extra jar tasks
    def defaultJar = tasks.register("${name}Jar", Jar.class) {
        from(sourceSets.named(name).get().output)
        archiveClassifier.set("${name}-dev")

        def buildDir = layout.buildDirectory.asFile.getOrElse(new File("build"))
        destinationDirectory.set(new File(buildDir, "devlibs"))

        description "Builds the standalone ${name} api jar."
        group 'build'
    }.get()

    def remappedJar = tasks.register("remap${name.capitalize()}Jar", RemapJarTask.class) {
        dependsOn defaultJar

        description "Remaps the built ${name} jar to intermediary mappings."
        group 'fabric'
        archiveClassifier.set(name)

        inputFile.convention(defaultJar.archiveFile)
    }.get()

    [defaultJar, remappedJar].each {
        tasks.assemble.dependsOn(it)
    }

    licenseJarTasks.add(defaultJar)
}

// include license file in jar tasks
licenseJarTasks.each {
    it.from('LICENSE') {
        rename { "${it}_${project.archivesBaseName}" }
    }
}

shadowJar {
    mergeServiceFiles()
}

def env = System.getenv()

tasks.register("github", GithubDeploymentTask) {
    dependsOn tasks.remapShadowJar

    config {
        token = env.get("GITHUB_TOKEN")
        repository = env.get("GITHUB_REPOSITORY")
    }

    release {
        title = "[$project.minecraft_version] $project.name $project.version"
        tag = buildUtils.latestTag()
    }

    assets.add(tasks.remapShadowJar.archiveFile.get())
}

kibu {
    addArtifact(remapActivityJar)
}

publishing {
    buildUtils.setupPublishRepository(repositories, props)

    publications {
        mavenJava(MavenPublication) {
            artifactId = project.archives_base_name

            from components.kibu

            pom {
                name = 'Minigame Lobby'
                description = 'A kibu plugin for managing minigame lobbies in FabricMC.'
            }
        }
    }
}